# longmem

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MEMORY_CLEANUP.md  PACKAGE_SUMMARY.txt  PROJECT_STRUCTURE.md  README.md  SETUP_COMPLETE.md  demo_interactive.db  environment.yml  main.py  migrate_add_last_used_turn.py  pyproject.toml  requirements.txt  results.ipynb  run_demo.ipynb  run_demo.sh
eval/: FIXES.md  SPEC_COMPLIANCE_ANALYSIS.md  __init__.py  benchmark_results.json  check_memory_injection.py  conversation_1000.json  conversation_quick.json  evaluate.py  generate.py  generate_quick.py  scenarios.json  scenarios_quick.json  test_last_used_turn.py
src/: agent.py  consolidator.py  context.py  distiller.py  models.py  prompts.py  retriever.py  store.py
tests/: test_consolidator.py  test_context.py  test_distiller.py  test_retriever.py  test_store.py
tests/fixtures/: distill_cases.json
