[project]
name = "atlas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openai>=2.18.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "sentence-transformers>=5.2.2",
    "sqlite-vec>=0.1.6",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
